# pydantic

./: .pre-commit-config.yaml  pyproject.toml
docs/: requirements.txt
tests/: requirements-linting.txt  requirements-testing.txt
